--- a/luxreport/luxreport_appnames.json
+++ b/luxreport/luxreport_appnames.json
@@ -32,6 +32,7 @@
 "com.google.android.inputmethod.pinyin.apk":
 "Google Pinyin Input",
 "com.google.android.voicesearch.apk": "Voice Search",
+"Gmail2.apk": "Gmail",
 "com.guardian.apk": "Guardian",
 "com.hi5.app.apk": "Hi5",
 "com.icenta.sudoku.apk": "Sudoku Free",
